feat:styling changes

--- a/src/Components/Avtar/avtar.css
+++ b/src/Components/Avtar/avtar.css
@@ -1,4 +1,5 @@
-.avtar-border{
-    border-radius: 60%;
-    height: 45px;
+.avtar-border {
+  border-radius: 60%;
+  height: 45px;
+  width: 45px;
 }
